--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-/python/__pycache__
-/python/env
-/python/example.wav
-/python/evn
-/python/venv
+/Python/FIR/__pycache__
+/Python/IIR/__pycache__
+/Python/env
+/Python/example.wav
+/Python/evn
+/Python/venv
+/Python/old
+/Python/hamming functions
